# reyaolivearturoUnidad1

backend/: Cargo.toml
backend/src/: db.rs  main.rs
backend/src/handlers/: auth.rs  login.rs  mod.rs  recover.rs  send_contact.rs
backend/src/models/: user.rs
backend/src/services/: recaptcha.rs
backend/src/utils/: errors.rs  mod.rs
frontend/: index.html
mail/: send_mail.py
