[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
env_logger = "0.10"
log = "0.4"
actix-cors = "0.7"
